	new file:   ZGame/game_tutorials/OpenGL/Frames Per Second/Lib/glew/lib/x64/glew32.lib
	new file:   ZGame/game_tutorials/OpenGL/Frames Per Second/Lib/glew/lib/x64/glew32s.lib
	new file:   ZGame/game_tutorials/OpenGL/Frames Per Second/Lib/glfw3/Lib/glfw3.lib
	new file:   ZGame/game_tutorials/OpenGL/Matrices/Lib/glew/lib/Win32/glew32.lib
	new file:   ZGame/game_tutorials/OpenGL/Matrices/Lib/glew/lib/Win32/glew32s.lib
	new file:   ZGame/game_tutorials/OpenGL/Matrices/Lib/glew/lib/x64/glew32.lib
	new file:   ZGame/game_tutorials/OpenGL/Matrices/Lib/glew/lib/x64/glew32s.lib
	new file:   ZGame/game_tutorials/OpenGL/Matrices/Lib/glfw3/Lib/glfw3.lib
	new file:   ZGame/game_tutorials/OpenGL/Quadrics/Glaux.lib
	new file:   ZGame/game_tutorials/OpenGL/Texture Mapping Part3/jpeg.lib
	new file:   ZGame/game_tutorials/OpenGL/Texture Mapping Part3/libc.lib
	new file:   ZGame/game_tutorials/Win32/2D RPG Part2/fmod.dll
	new file:   ZGame/game_tutorials/Win32/2D RPG Part2/fmodvc.lib
	new file:   ZGame/game_tutorials/Win32/2D RPG Part3/fmod.dll
	new file:   ZGame/game_tutorials/Win32/2D RPG Part3/fmodvc.lib
	new file:   ZGame/game_tutorials/Win32/2D RPG Part4/fmod.dll
	new file:   ZGame/game_tutorials/Win32/2D RPG Part4/fmodvc.lib
	new file:   ZGame/game_tutorials/Win32/2D RPG Part5/fmod.dll
	new file:   ZGame/game_tutorials/Win32/2D RPG Part5/fmodvc.lib
	new file:   ZGame/game_tutorials/Win32/2D RPG Part6/fmod.dll
	new file:   ZGame/game_tutorials/Win32/2D RPG Part6/fmodvc.lib
	new file:   ZGame/game_tutorials/Win32/BlackJack/GT_WinObj2D.lib
	new file:   ZGame/game_tutorials/Win32/BlackJack/libc.lib

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/06/04.16_34_20.54.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
