@@ -8017,3 +8017,15 @@ Changes to be committed:
 	modified:   Doc/K/T.2015.BugFree.cs
 	modified:   History.txt
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+gt.2015/06/04.18_03_45.35.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   History.txt
+	modified:   ZGame/game_tutorials/Win32/Color Text/Text.cpp
+	modified:   ZGame/game_tutorials/Win32/Keyboard Input/win_main.cpp
+
